Add URL parameter script

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 
     <title>Identify Automation Opportunities </title>
 
+     <!-- USER DATA EXTRACTOR -->
+     <script type="text/javascript" src="add-parameter.js"></script>
+
     <link type="text/css" rel="stylesheet" href="lib/icomoon.css">
     <script type="text/javascript" src="lib/player-0.0.11.min.js"></script>
     <script type="text/javascript" src="lib/lzwcompress.js"></script>
