--- a/index.html
+++ b/index.html
@@ -5,10 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
 
-    <title>Identify Automation Opportunities </title>
-
-     <!-- USER DATA EXTRACTOR -->
-     <script type="text/javascript" src="add-parameter.js"></script>
+    <title>Prepare for Automation Conversations</title>
 
     <link type="text/css" rel="stylesheet" href="lib/icomoon.css">
     <script type="text/javascript" src="lib/player-0.0.11.min.js"></script>
@@ -24,7 +21,7 @@
     <![endif]-->
 
     <script id="__ENTRY__" type="application/json">
-      {".js":["rise/903e1ecb.js"]}
+      {".js":["rise/7664dda2.js"]}
     </script>
 
     <script id="__REMOTE_ENTRIES__" type="application/json">
